src/objects/Value_Bucket__c.object
<CustomObject>
    <description>How contact relates for us on a specific opportunity; Advocate, Supporter, Opponent...</description>
    <fields>
        <fullName>BV_Status__c</fullName>
        <description>Business Value Status
Confirmed or Assumed</description>
        <inlineHelpText>Business Value Status
Confirmed or Assumed</inlineHelpText>
        <label>BV Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Value__c</fullName>
        <label>Business Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Rel_Status__c</fullName>
        <label>Contact Rel Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advocate</fullName>
                </value>
                <value>
                    <fullName>Opponent</fullName>
                </value>
                <value>
                    <fullName>Supporter</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Relationship_Statuses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>E_Status__c</fullName>
        <description>Environmental Status
Assumed or Confirmed</description>
        <inlineHelpText>Environmental Status
Assumed or Confirmed</inlineHelpText>
        <label>E Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Environmental_Value__c</fullName>
        <label>Environmental Value</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>F_Status__c</fullName>
        <description>Financial Status
Assumed or Confirmed</description>
        <inlineHelpText>Financial Status
Assumed or Confirmed</inlineHelpText>
        <label>F Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Financial_Value__c</fullName>
        <label>Financial Value</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>P_Status__c</fullName>
        <description>Personal Status
Assumed or Confirmed</description>
        <inlineHelpText>Personal Status
Assumed or Confirmed</inlineHelpText>
        <label>P Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Personal_Business_Org_Agendas__c</fullName>
        <description>In proposing an energy management solution, who&apos;s going to see you as a threat to their power and/or job?
Whose agenda is served best by what you are propsing?
Who has an ax togrind with another dept. or individual?
How does what you propose serve or detract from teh Organization&apos;s Agenda?</description>
        <inlineHelpText>In proposing an energy mgmt solution, who will see you as a threat to their power/job?
Whose agenda is served best by your propsal?
Who has an ax to grind with another dept. or individual?
How does your proposal serve or detract from the Org&apos;s Agenda?</inlineHelpText>
        <label>Personal Business &amp; Org Agendas</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Personal_Value__c</fullName>
        <label>Personal Value</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Political_Tactics_for_Selected_Contacts__c</fullName>
        <label>Political Tactics for Selected Contacts</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>T_Status__c</fullName>
        <description>Technical Status
Assumed or Confirmed</description>
        <inlineHelpText>Technical Status
Assumed or Confirmed</inlineHelpText>
        <label>T Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technical_Value__c</fullName>
        <label>Technical Value</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tracker__c</fullName>
        <label>Tracker</label>
        <referenceTo>Tracker__c</referenceTo>
        <relationshipName>Relationship_Statuses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Value Bucket</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Value Bucket</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Value Bucket</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>